兼容Java 8