@@ -104,7 +104,7 @@ public class AnnotationUtils {
                 // 如果是以文件的形式保存在服务器上
                 if ("file".equals(protocol)) {
                     // 获取包的物理路径
-                    String filePath = URLDecoder.decode(url.getFile(), StandardCharsets.UTF_8);
+                    String filePath = URLDecoder.decode(url.getFile(), "UTF-8");
                     // 以文件的方式扫描整个包下的文件 并添加到集合中
                     findAndAddClassesInPackageByFile(packageName, filePath, recursive, classes);
                 } else if ("jar".equals(protocol)) {
